Hide clipboard warning paragraph initially

--- a/password_generator/index.html
+++ b/password_generator/index.html
@@ -32,7 +32,7 @@
         <div id="buttons_div">
             <button id="refresh_button" onclick="main()" class="button_big">⟳</button>
             <button id="clipboard_button" onclick="copy_to_clipboard()" class="button_big">📋</button>
-            <p id="clipboard_warning">Copied</p>
+            <p id="clipboard_warning" visibility="hidden">Copied</p>
         </div>
         
     </div>
